test/types/tuple/homog/tooBigTuple.good
tooBigTuple.chpl:2: error: Tuples of size >9223372036854775807 are not currently supported
