test/types/tuple/homog/tooBigTuple.chpl
param Sz3: uint(64) = max(int):uint + 10;
var MyTuple3: Sz3*int;
writeln(MyTuple3);
